# traction

./: README.md  deploy.yml  pyproject.toml
.github/workflows/: deploy.yml  deployment.yml
traction/: __init__.py  app.py
traction/static/trello/clean_my_board/: client.js
traction/templates/trello/clean_my_board/: index.html  index.html.j2  settings.html.j2
traction/trello/: clean_my_board.py
