[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traction"
dynamic = ["version"]
description = 'A flask webserver hosting a number of integrations for and between Trello and Alexa Skills Kit'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "michael-cox", email = "2.cox.michael@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/michael-cox/traction#readme"
Issues = "https://github.com/michael-cox/traction/issues"
Source = "https://github.com/michael-cox/traction"

[tool.hatch.version]
path = "traction/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/traction tests}"

[tool.coverage.run]
source_pkgs = ["traction", "tests"]
branch = true
parallel = true
omit = [
  "traction/__about__.py",
]

[tool.coverage.paths]
traction = ["traction", "*/traction/src/traction"]
tests = ["tests", "*/traction/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
